--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+# spring.datasource.username=springuser
+# spring.datasource.password=ThePassword
 
 wavefront.application.name=hoge
 wavefront.application.service=foo
